# LegendScope-backend

./: .dockerignore  .gitignore  BATTLE_SUMMARY_STATUS_CHECK.md  DEEPSEEK_R1_INTEGRATION.md  Dockerfile  FAULTLINES_FIELD_MAPPING.md  FAULTLINES_FIX_STATUS.md  FAULTLINES_NULL_VALUES_ANALYSIS.md  Makefile  README.md  TEST_LAMBDA_DIRECT.sh  TEXT_GENERATION_SERVICE.md  VOICE_IN_FOG_CACHE_OPTIMIZATION.md  VOICE_IN_FOG_CURL_EXAMPLES.md  VOICE_IN_FOG_INTEGRATION.md  VOICE_IN_FOG_SIMPLIFIED.md  VOICE_IN_FOG_STARTER_TOPICS.md  VOICE_IN_FOG_TESTS_RESULTS.md  VOICE_IN_FOG_TEXT_GEN_UPDATE.md  compare_faultlines.py  debug_matches.py  docker-compose.yml  faultlines_STEPZ_NA7.json  faultlines_cant_type1998.json  pyproject.toml  requirements-dev.txt  requirements.txt  sample_match_response.json  sample_single_match.json  test_faultlines.py  test_starter_topics.py
.github/workflows/: ci-cd.yml
app/: main.py  schemas.py  services.py
app/api/: routes.py
app/core/: config.py
app/services/: __init__.py  battle_summary.py  faultlines.py  faultlines_old.py  item_store.py  player_matches.py  profile.py  profile_status.py  signature_playstyle.py  text_generation.py  voice_in_fog.py
infra/: EC2_MANUAL_SETUP.md
infra/nginx/: nginx.conf
infra/nginx/ssl/: .gitkeep
infra/systemd/: legendscope.service
infra/terraform/: README.md  main.tf
scripts/: deploy.sh  ec2-setup.sh
tests/: test_items.py  test_profile.py
