[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "legendscope-backend"
version = "0.1.0"
description = "FastAPI backend ready for EC2 deployment"
requires-python = ">=3.11"
authors = [{ name = "LegendScope" }]
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "python-dotenv==1.0.1",
    "pydantic-settings==2.4.0",
    "httpx==0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["app"]

[tool.ruff]
line-length = 100
exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "N"]
ignore = ["S101"]

[tool.ruff.format]
quote-style = "double"
